about page; emphasize p2p

--- a/about.html
+++ b/about.html
@@ -55,17 +55,23 @@
             </div>
             <div class="column is-1"></div>
             <div class="column is-3 has-border">
-              <i class="fas fa-comments"></i>
+              <i class="fas fa-exchange-alt"></i>
               <h3 class="title is-5">P2P</h3>
-              <p>Don't just monetize. Build community.</p>
+              <p>Built on a decentralized exchange, transactions are peer-to-peer. No middlemen.</p>
             </div>
           </div>
 
           <div class="columns">
             <div class="column is-3 has-border">
+              <i class="fas fa-comments"></i>
+              <h3 class="title is-5">Community</h3>
+              <p>Don't just monetize. Build community with sponsors.</p>
+            </div>
+            <div class="column is-1"></div>
+            <div class="column is-3 has-border">
               <i class="fab fa-expeditedssl"></i>
-              <h3 class="title is-5">Privacy</h3>
-              <p>Designed to protect everyone's privacy.</p>
+              <h3 class="title is-5">Private</h3>
+              <p>Designed to protect end-user privacy. No microtargetting or stalking the audience!</p>
             </div>
             <div class="column is-1"></div>
             <div class="column is-3 has-border">
@@ -74,11 +80,6 @@
               <p>Open orderbooks. Open transactions on blockchain.</p>
             </div>
             <div class="column is-1"></div>
-            <div class="column is-3 has-border">
-              <i class="fas fa-sitemap"></i>
-              <h3 class="title is-5">Validated.</h3>
-              <p>Sponsors know exactly where and when ads run.</p>
-            </div>
           </div>
 
         </div>
