--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
             <div class="column is-3 has-border">
               <i class="fas fa-exchange-alt"></i>
               <h3 class="title is-5">P2P</h3>
-              <p>Built on a decentralized exchange, transactions are peer-to-peer. No middlemen.</p>
+              <p>Built on the 0x decentralized exchange protocol, transactions are peer-to-peer. No middlemen.</p>
             </div>
           </div>
 
