--- a/index.html
+++ b/index.html
@@ -27,4 +27,4 @@
 
   </section>
 
-  <section class="ms-bids"><div id="app" class="main"></div></section><footer class="footer"><div class="content"><div class="columns"><div class="column is-1"></div><div class="column is-5 column--footer-links"><div class="ao-title-container"><img src="static/img/logo.svg" width="200" alt="microsponsors"/></div><p><a href="about.html">About</a><br/><a href="contact.html">Contact</a><br/><a href="https://github.com/microsponsors" class="ms-github"><i class="fab fa-github"></i></a></p></div></div></div></footer></body></html>
+  <section class="ms-bids"><div id="app" class="main"></div></section><footer class="footer"><div class="content"><div class="columns"><div class="column is-1"></div><div class="column is-5 column--footer-links"><div class="ao-title-container"><img src="static/img/logo.svg" width="200" alt="microsponsors"/></div><p><a href="about.html">About</a><br/><a href="contact.html">Contact</a></p></div></div></div></footer></body></html>
