--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 
         <div class="container container--about">
           <h2 class="title is-3">
-             A <strong>peer-to-peer</strong> marketplace that helps creators earn micropayments from sponsors.
+             A <strong>peer-to-peer</strong> marketplace that helps creators earn payments from sponsors.
           </h2>
           <p>Content creators will be able to easily deploy the suite of Microsponsors tools to help them earn crypto for their work. If you like what you see so far, <a href="contact.html" style="color:#00edb8">get in touch.</a></p>
         </div>
@@ -45,13 +45,13 @@
             <div class="column is-3 has-border">
               <i class="fab fa-ethereum"></i>
               <h3 class="title is-5">Cryptocurrency</h3>
-              <p>Makes it efficient to send small payments to content creators.</p>
+              <p>Makes it efficient to send payments to content creators.</p>
             </div>
             <div class="column is-1"></div>
             <div class="column is-3 has-border">
               <i class="fas fa-bullhorn"></i>
               <h3 class="title is-5">Bidding</h3>
-              <p>Helps content creators get the right price for ad slots.</p>
+              <p>Helps content creators get the right price for sponsored ad slots.</p>
             </div>
             <div class="column is-1"></div>
             <div class="column is-3 has-border">
@@ -71,7 +71,7 @@
             <div class="column is-3 has-border">
               <i class="fab fa-expeditedssl"></i>
               <h3 class="title is-5">Private</h3>
-              <p>Designed to protect end-user privacy. No microtargetting or stalking the audience!</p>
+              <p>Designed to protect end-user privacy. No microtargetting or stalking!</p>
             </div>
             <div class="column is-1"></div>
             <div class="column is-3 has-border">
