--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
 
       <div class="container">
-        <p style="margin-top: 10vh; max-width: 500px; text-align: center; margin-left: auto; margin-right: auto; font-weight: bold;">This demo uses the 0x Launch Kit and 0x.js to power an auction-style marketplace.</p>
+        <p style="margin-top: 10vh; max-width: 500px; text-align: center; margin-left: auto; margin-right: auto; font-weight: bold;">This demo uses the <a href="https://0x.org/">0x Launch Kit and 0x.js</a> to power an auction-style marketplace.</p>
         <div class="ms-video-container"
           style="width:100%; max-width: 100%; text-align: center; margin-top: 2rem;">
           <iframe src="https://player.vimeo.com/video/316920159" frameborder="0" style="width: 640px; max-width: 100%; height: 360px; margin-left: auto; margin-right: auto;" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
