--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
           <h2 class="title is-3">
              A <strong>peer-to-peer</strong> marketplace that helps creators earn payments from sponsors.
           </h2>
-          <p>Content creators will be able to easily deploy the suite of Microsponsors tools to help them earn crypto for their work. If you like what you see so far, <a href="contact.html" style="color:#00edb8">get in touch.</a></p>
+          <p>Content creators will be able to easily deploy the suite of Microsponsors tools to monetize their work. If you like what you see so far, <a href="contact.html" style="color:#00edb8">get in touch.</a></p>
         </div>
 
         <div class="container container--about-boxes">
