--- a/about.html
+++ b/about.html
@@ -36,7 +36,10 @@
           <h2 class="title is-3">
              A <strong>peer-to-peer</strong> marketplace that helps creators earn payments from sponsors.
           </h2>
-          <p>Content creators will be able to easily deploy the suite of Microsponsors tools to monetize their work. If you like what you see so far, <a href="contact.html" style="color:#00edb8">get in touch.</a></p>
+
+          <p style="margin-top: 3rem;">It's hard for niche content creators to monetize. No matter how passionate creators are, finding direct sponsors is difficult. A sponsorship is about more than just advertising. It is about building community and trust around your content.</p>
+
+          <p style="margin-top: 2rem;">Micropsonsors will connect creators and sponsors directly. If you like what you see so far, <a href="contact.html" style="color:#00edb8">get in touch</a>.</p>
         </div>
 
         <div class="container container--about-boxes">
