--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
             <div class="column is-3 has-border">
               <i class="fab fa-ethereum"></i>
               <h3 class="title is-5">Cryptocurrency</h3>
-              <p>Makes it efficient to send payments to content creators.</p>
+              <p>Makes it efficient to send payments to content creators. A simple UI will make it painless to use.</p>
             </div>
             <div class="column is-1"></div>
             <div class="column is-3 has-border">
