--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
           <h1 class="title"><img src="static/img/logo.svg" width="200" alt="microsponsors"/></h1>
         </div>
       </div>
-
       <div class="container">
-        <p style="margin-top: 10vh; max-width: 500px; text-align: center; margin-left: auto; margin-right: auto; font-weight: bold;">This video demonstrates a peer-to-peer auction-style marketplace for sponsorships powered by the <a href="https://0x.org/" style="color: #00edb8;">0x Launch Kit and 0x.js</a> on the Ethereum blockchain. <a href="about.html" style="color: #00edb8;">Find out more</a></p>
-        <div class="ms-video-container"
-          style="width:100%; max-width: 100%; text-align: center; margin-top: 2rem;">
-          <iframe src="https://player.vimeo.com/video/316920159" frameborder="0" style="width: 640px; max-width: 100%; height: 360px; margin-left: auto; margin-right: auto;" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        </div>
+        <h3 class="title" style="margin-top: 25vh;">Watch this space.</h3>
+        <p class="subtitle" style="text-align: center;">
+          <a href="about.html" style="color: #00edb8;">Find out more</a>
+        </p>
       </div>
   </div>
 
