--- a/subscription-thank-you.html
+++ b/subscription-thank-you.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>microsponsors.io</title>
     <meta name="description" content="">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="static/css/main.css">
     <!-- Google Fonts/ TODO: replace this eventually for privacy's sake -->
     <link href="https://fonts.googleapis.com/css?family=Quicksand:500,700" rel="stylesheet">
     <!-- Font Awesome -->
