--- a/subscription-thank-you.html
+++ b/subscription-thank-you.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>microsponsors.io</title>
     <meta name="description" content="">
-    <link rel="stylesheet" href="main.css">
-    <!-- Google Fonts/ TODO: replace this eventually for privacy's sake -->
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:500,700" rel="stylesheet">
+    <link rel="stylesheet" href="static/css/main.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   </head>
@@ -31,7 +29,8 @@
           </h2>
 
           <h3 class="title is-5 is-size-6-mobile">
-            We'll keep you posted as the project progresses... <br />We're just getting started.</h3>
+            We'll keep you posted as the project progresses... <br /><br />
+            We're just getting started.</h3>
 
         </div>
 
