temp: hide newsletter, show twitter links

--- a/index.html
+++ b/index.html
@@ -14,10 +14,18 @@
     <section class="hero hero--homepage-top">
       <div class="navbar-menu navbar-menu--ms">
         <div class="navbar-end">
+
+          <!--
           <span>Get early access + updates <em>&rarr;</em></span>
           <a href="javascript: void(0);" id="ms-nav-btn-newsletter">
             <i class="fas fa-envelope"></i>
           </a>
+          -->
+          <span>Follow us on Twitter <em>&rarr;</em></span>
+          <a href="https://twitter.com/microsponsors" target="_blank">
+            <i class="fab fa-twitter"></i>
+          </a>
+
         </div>
       </div>
       <div class="hero-body">
@@ -49,6 +57,7 @@
               </a>
 
               <!-- mobile: -->
+              <!--
               <a href="javascript: void(0);"
                 class="button button--early-access"
                 id="ms-nav-btn-newsletter2">
@@ -59,6 +68,17 @@
               <span class="buttons--early-access__text">
                 <em>&larr;</em>Get early access + updates
               </span>
+            -->
+              <a href="https://twitter.com/microsponsors" target="_blank"
+                class="button button--early-access">
+                <span class="icon is-medium">
+                  <i class="fab fa-twitter"></i>
+                </span>
+              </a>
+              <span class="buttons--early-access__text">
+                <em>&larr;</em>Follow us on Twitter
+              </span>
+
 
           </div>
 
@@ -187,13 +207,15 @@
           <div class="column is-1"></div>
           <div class="column is-9 column--footer-links">
 
-          <i class="fas fa-envelope"></i>
+
           <!-- Newsletter Widget -->
+          <!--
+          <i class="fas fa-envelope"></i>
 
           <iframe class="mj-w-res-iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://app.mailjet.com/widget/iframe/3Zej/h9N" width="100%"></iframe>
 
           <script type="text/javascript" src="https://app.mailjet.com/statics/js/iframeResizer.min.js"></script>
-
+          -->
           <!-- /Newsletter Widget -->
 
             <div class="ms-title-container">
