--- a/subscription-thank-you.html
+++ b/subscription-thank-you.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>microsponsors.io</title>
     <meta name="description" content="">
-    <link rel="stylesheet" href="static/css/main.css">
+    <link rel="stylesheet" href="static/main.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   </head>
@@ -30,8 +30,6 @@
 
           <h3 class="title is-5 is-size-6-mobile">
             We'll keep you posted as the project progresses... <br /><br />
-            We're just getting started.</h3>
-
         </div>
 
       </div> <!-- /.hero-body -->
