--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
         <div class="container">
           <h2 class="title is-2 is-size-4-mobile">
-            A peer-to-peer marketplace for sponsorships.
+            Buy, sell and trade web traffic in a peer-to-peer marketplace.
           </h2>
 
           <h3 class="title is-5 is-size-7-mobile">
-            We help creators and publishers sell ad slots directly to sponsors using tamper-proof blockchain technology in a fair and transparent auction-style marketplace.
+            Auctioning sponsorships and ad slots using tamper-proof blockchain technology to fight fraud and waste. <span>Coming in 2019.</span>
           </h3>
 
           <div class="buttons buttons--early-access">
@@ -177,7 +177,7 @@
         <div class="container">
 
             <h3 class="title is-5 is-size-6-mobile">
-              Our core principles:
+              Core principles:
             </h3>
             <ul>
               <li class="title is-5 is-size-6-mobile">
