marketing site updates

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
           </h2>
 
           <h3 class="title is-5 is-size-7-mobile">
-            Auctioning sponsorships and ad slots using tamper-proof blockchain technology to fight fraud and waste. <span>Coming in 2019.</span>
+            Microsponsors is an ad network directly connecting sponsors with content creators and publishers using tamper-proof blockchain technology.
+            <span>Coming in 2019.</span>
           </h3>
 
           <div class="buttons buttons--early-access">
@@ -81,8 +82,11 @@
 
 
           </div>
-
         </div>
+
+        <img src="static/img/icons-0x-eth.svg"
+          class="icons--0x-eth"
+          alt="Powered by 0x and Ethereum" />
 
       </div> <!-- /.hero-body -->
     </section> <!-- /.hero -->
