--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
         <div class="container">
           <h2 class="title is-2 is-size-4-mobile">
-            Buy, sell and trade web traffic in a peer-to-peer marketplace.
+            Buy, sell and trade sponsorships &amp; web traffic in a peer-to-peer marketplace.
           </h2>
 
           <h3 class="title is-5 is-size-7-mobile">
-            Microsponsors is an ad network directly connecting sponsors with content creators and publishers using tamper-proof blockchain technology.
+            Microsponsors is a sponsorship &amp; advertising network marketplace directly connecting buyers (sponsors) and sellers (creators) using tamper-proof blockchain technology.
             <span>Coming in 2019.</span>
           </h3>
 
@@ -116,6 +116,7 @@
           <ul>
             <li class="is-5 is-size-7-mobile">Built on the <a href="https://0x.org" target="_blank">0x exchange protocol</a>, all transactions will be peer-to-peer and take place through a series of smart contracts on the Ethereum blockchain.</li>
             <li class="is-5 is-size-7-mobile">In other words: No middlemen!</li>
+            <li class="is-5 is-size-7-mobile">Sponsorships and ads will be traded on the Ethereum blockchain as ERC721 tokens.</li>
           </ul>
         </div>
 
