--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <div class="container">
           <h2 class="title is-2 is-size-4-mobile">
-            Buy, sell and trade sponsorships &amp; web traffic in a peer-to-peer marketplace.
+            Buy and sell sponsorships &amp; web traffic in a peer-to-peer marketplace.
           </h2>
 
           <h3 class="title is-5 is-size-7-mobile">
@@ -116,7 +116,7 @@
           <ul>
             <li class="is-5 is-size-7-mobile">Built on the <a href="https://0x.org" target="_blank">0x exchange protocol</a>, all transactions will be peer-to-peer and take place through a series of smart contracts on the Ethereum blockchain.</li>
             <li class="is-5 is-size-7-mobile">In other words: No middlemen!</li>
-            <li class="is-5 is-size-7-mobile">Sponsorships and ads will be traded on the Ethereum blockchain as ERC721 tokens.</li>
+            <li class="is-5 is-size-7-mobile">Sponsorships and ad slots will be traded on the Ethereum blockchain as ERC721 tokens.</li>
           </ul>
         </div>
 
