--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
         </div> <!-- /.container -->
 
         <div class="container">
+
           <h2 class="title is-2 is-size-4-mobile">
-            Buy and sell sponsorships &amp; web traffic in a peer-to-peer marketplace.
+            Buy and and sell sponsorships &amp; digital ads in a peer-to-peer marketplace.
           </h2>
 
           <h3 class="title is-5 is-size-7-mobile">
-            Microsponsors is a sponsorship &amp; advertising network marketplace directly connecting buyers (sponsors) and sellers (creators) using tamper-proof blockchain technology.
+            Microsponsors is a sponsorship &amp; advertising network directly connecting buyers (sponsors) and sellers (creators) using tamper-proof blockchain technology.
             <span>Coming in 2019.</span>
           </h3>
 
