--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </h2>
 
           <h3 class="title is-5 is-size-7-mobile">
-            Microsponsors is a sponsorship &amp; advertising network directly connecting buyers (sponsors) and sellers (creators) using tamper-proof blockchain technology.
+            Microsponsors is a sponsorship &amp; advertising network directly connecting buyers (sponsors) and sellers (creators + publishers) using tamper-proof blockchain technology.
             <span>Coming in 2019.</span>
           </h3>
 
