--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             Buy and and sell sponsorships &amp; digital ads in a peer-to-peer marketplace.
           </h2>
 
-          <h3 class="title is-5 is-size-7-mobile">
-            Microsponsors is a sponsorship &amp; advertising network directly connecting buyers (sponsors) and sellers (creators + publishers) using tamper-proof blockchain technology.
+          <h3 class="title is-5 is-size-6-mobile">
+            A marketplace that will directly connect buyers (sponsors) and sellers (creators + publishers) using tamper-proof blockchain technology.
             <span>Coming in 2019.</span>
           </h3>
 
@@ -117,7 +117,7 @@
           <ul>
             <li class="is-5 is-size-7-mobile">Built on the <a href="https://0x.org" target="_blank">0x exchange protocol</a>, all transactions will be peer-to-peer and take place through a series of smart contracts on the Ethereum blockchain.</li>
             <li class="is-5 is-size-7-mobile">In other words: No middlemen!</li>
-            <li class="is-5 is-size-7-mobile">Sponsorships and ad slots will be traded on the Ethereum blockchain as ERC721 tokens.</li>
+            <li class="is-5 is-size-7-mobile">Sponsorships and ad slots will be traded on the Ethereum blockchain as ERC721 "Non-Fungible" tokens.</li>
           </ul>
         </div>
 
