--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <div class="container">
 
           <h2 class="title is-2 is-size-4-mobile">
-            Buy and and sell sponsorships &amp; digital ads in a peer-to-peer marketplace.
+            Buy and sell sponsorships &amp; digital ads in a peer-to-peer marketplace.
           </h2>
 
           <h3 class="title is-5 is-size-6-mobile">
-            A marketplace that will directly connect buyers (sponsors) and sellers (creators + publishers) using tamper-proof blockchain technology.
+            A sponsorship marketplace &amp ad network that helps buyers (sponsors + advertisers) and sellers (creators + publishers) transact directly using tamper-proof blockchain technology.
             <span>Coming in 2019.</span>
           </h3>
 
