--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </h2>
 
           <h3 class="title is-5 is-size-6-mobile">
-            A sponsorship marketplace &amp ad network that helps buyers (sponsors + advertisers) and sellers (creators + publishers) transact directly using tamper-proof blockchain technology.
+            Helping to directly connect buyers (sponsors + advertisers) and sellers (creators + publishers) using tamper-proof blockchain technology.
             <span>Coming in 2019.</span>
           </h3>
 
