--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container">
 
           <h2 class="title is-2 is-size-4-mobile">
-            Buy and sell sponsorships &amp; digital ads in a peer-to-peer marketplace.
+            A peer-to-peer ad network and sponsorship marketplace.
           </h2>
 
           <h3 class="title is-5 is-size-6-mobile">
