update: look & feel

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
       <div class="navbar-menu navbar-menu--ms">
         <div class="navbar-end">
 
-          <a href="https://medium.com/@microsponsors" target="_blank" class="navbar-item">
-            Blog
+          <a href="https://twitter.com/microsponsors" class="navbar-item"
+            target="_blank">
+            <i class="fab fa-twitter"></i>
           </a>
 
-          <a href="https://twitter.com/microsponsors" target="_blank" class="navbar-item">
-            <i class="fab fa-twitter"></i>
+          <a href="https://medium.com/@microsponsors" class="navbar-item"
+            target="_blank">
+            <i class="fab fa-medium-m"></i>
           </a>
 
         </div>
@@ -62,10 +64,13 @@
                   <i class="fab fa-twitter"></i>
                 </span>
               </a>
-              <span class="buttons--early-access__text">
-                <em>&larr;</em>Follow us on Twitter
-              </span>
 
+              <a href="https://medium.com/@microsponsors" target="_blank"
+                class="button button--early-access">
+                <span class="icon is-medium">
+                  <i class="fab fa-medium-m"></i>
+                </span>
+              </a>
 
           </div>
         </div>
