--- a/index.html
+++ b/index.html
@@ -8,27 +8,26 @@
     <meta name="description" content="Microsponsors is a peer-to-peer sponsorship marketplace and ad network.">
     <link rel="stylesheet" href="static/css/main.css">
     <!-- Font Awesome / TODO load this locally for privacy's sake -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+      crossorigin="anonymous">
   </head>
-  <body class="ms-index__body">
+  <body class="ms-body ms-body--index">
     <section class="hero hero--homepage-top">
-      <div class="navbar-menu navbar-menu--ms">
+      <div class="navbar-menu ms-navbar-menu">
         <div class="navbar-end">
-
           <a href="https://twitter.com/microsponsors" class="navbar-item"
             target="_blank">
             <i class="fab fa-twitter"></i>
           </a>
-
           <a href="https://medium.com/@microsponsors" class="navbar-item"
             target="_blank">
             <i class="fab fa-medium-m"></i>
           </a>
-
         </div>
       </div>
       <div class="hero-body">
-
         <div class="container">
           <div class="ms-logo-container">
             <h1 class="title">
@@ -36,23 +35,19 @@
             </h1>
           </div>
         </div> <!-- /.container -->
-
         <div class="container">
-
           <h2 class="title is-2 is-size-4-mobile">
             A peer-to-peer sponsorship marketplace and ad network.
           </h2>
-
           <h3 class="title is-5 is-size-6-mobile">
             Privacy-first AdTech solutions for Web 3.
             <span>Coming in 2019.</span>
           </h3>
-
           <div class="buttons buttons--early-access">
 
               <!-- desktop: -->
               <a href="javascript: void(0);"
-                class="button is-medium button--more-details"
+                class="button is-primary is-medium button--more-details"
                 id="ms-btn-more-details">
                 <i class="fas fa-chevron-down"></i>
               </a>
@@ -81,12 +76,6 @@
 
       </div> <!-- /.hero-body -->
     </section> <!-- /.hero -->
-
-    <!-- Microsponsors React App
-    <section class="ms-bids">
-      <div id="app" class="main"></div>
-    </section>
-    -->
 
     <section class="section homepage-details" id="ms-homepage-details">
       <div class="container">
@@ -202,14 +191,45 @@
       <div class="content">
         <div class="columns">
           <div class="column is-1"></div>
-          <div class="column is-9 column--footer-links">
-            <div class="ms-title-container">
+          <div class="column is-4 column--footer-links">
+
+            <div class="footer__link-container">
+              <a href="javascript: void(0);" class="footer__link">
+                <i class="far fa-envelope"></i>
+                hello<span class="is-hidden">\</span>@<span span class="is-hidden">/</span>microsponsors.io
+              </a>
+            </div>
+
+            <div class="footer__link-container">
+              <a href="https://twitter.com/microsponsors" class="footer__link" target="_blank">
+                <i class="fab fa-twitter"></i>
+                twitter.com/microsponsors
+              </a>
+            </div>
+
+            <div class="footer__link-container">
+              <a href="https://medium.com/@microsponsors" class="footer__link" target="_blank">
+                <i class="fab fa-medium-m"></i>
+                medium.com/@microsponsors
+              </a>
+            </div>
+
+            <div class="footer__link-container">
+              <a href="https://github.com/microsponsors" class="footer__link" target="_blank">
+                <i class="fab fa-github"></i>
+                github.com/microsponsors
+              </a>
+            </div>
+
+            <div class="ms-title-container ms-title-container--ms">
               <img src="static/img/logo.svg" width="200" alt="microsponsors" />
             </div>
+
            <div class="ms-title-container ms-title-container--nn">
             <p>Microsponsors is a division of: </p>
              <img src="static/img/logo-niche-networks.svg" width="200" alt="niche networks" />
            </div>
+
         </div>
       </div>
     </footer>
