homepage title copy

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div> <!-- /.container -->
         <div class="container">
           <h2 class="title is-2 is-size-4-mobile">
-            A peer-to-peer sponsorship marketplace and ad network.
+            A peer-to-peer sponsorship marketplace.
           </h2>
           <h3 class="title is-5 is-size-6-mobile">
             Privacy-first AdTech solutions for Web 3.
