--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </h2>
           <h3 class="title is-5 is-size-6-mobile">
             Privacy-first Marketing solutions for Web 3.
-            <span>Coming in 2019.</span>
+            <span>Testing now. Launching soon!</span>
           </h3>
           <div class="buttons buttons--early-access">
 
