--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>microsponsors.io</title>
     <meta name="description" content="Microsponsors is a peer-to-peer sponsorship marketplace and ad network.">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <!-- CSS -->
     <link rel="stylesheet" href="static/css/main.css">
     <!-- Font Awesome / TODO load this locally for privacy's sake -->
     <link rel="stylesheet"
