homepage: update button

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
               <!-- desktop: -->
               <a href="javascript: void(0);"
-                class="button is-primary is-medium button--more-details"
+                class="button is-primary is-inverse is-medium button--more-details"
                 id="ms-btn-more-details">
                 <i class="fas fa-chevron-down"></i>
               </a>
