--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
     <link rel="stylesheet" href="static/css/main.css">
-    <!-- Font Awesome / TODO load this locally for privacy's sake -->
+    <!-- Font Awesome  -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
       integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
@@ -43,15 +43,23 @@
           </h2>
           <h3 class="title is-5 is-size-6-mobile">
             Privacy-first Marketing solutions for Web 3.
-            <span>Testing now. Launching soon!</span>
+            <span>Now live on Ethereum's Kovan test network!</span>
           </h3>
           <div class="buttons buttons--early-access">
 
               <!-- desktop: -->
-              <a href="javascript: void(0);"
-                class="button is-primary is-inverse is-medium button--more-details"
+              <a href="http://test.microsponsors.io/?view=registry"
+                class="button is-primary is-green is-medium is-emphasized button--more-details"
                 id="ms-btn-more-details">
-                <i class="fas fa-chevron-down"></i>
+                Register
+                &nbsp;<i class="fas fa-chevron-right"></i>
+              </a>
+
+              <a href="http://test.microsponsors.io/"
+                class="button is-primary is-medium is-emphasized button--more-details"
+                id="ms-btn-more-details">
+                Browse the exchange
+                &nbsp;<i class="fas fa-chevron-right"></i>
               </a>
 
               <!-- mobile: -->
@@ -79,7 +87,7 @@
       </div> <!-- /.hero-body -->
     </section> <!-- /.hero -->
 
-    <section class="section homepage-details" id="ms-homepage-details">
+    <section class="section homepage-details">
       <div class="container">
 
         <div class="homepage-details__detail">
@@ -117,8 +125,12 @@
           <div class="detail-icon detail-icon__privacy"></div>
           <h3 class="title is-4 is-size-6-mobile">Privacy-first</h3>
           <ul>
-            <li class="is-5 is-size-7-mobile">Privacy and respect for audiences, by design.</li>
-            <li class="is-5 is-size-7-mobile">GDPR-compliant out of the box, the toughest privacy standard on the planet.</li>
+            <li class="is-5 is-size-7-mobile">
+              Privacy and respect for audiences, by design.
+            </li>
+            <li class="is-5 is-size-7-mobile">
+              Exploring new business models for the web.
+            </li>
           </ul>
         </div>
 
@@ -237,7 +249,7 @@
       </div>
     </footer>
 
-    <script>
+<!--     <script>
       'use strict';
       document.addEventListener('DOMContentLoaded', function () {
         var $w = $('window');
@@ -259,7 +271,7 @@
         }
       });
     </script>
-    <script type="text/javascript" src="static/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="static/js/jquery-3.3.1.min.js"></script> -->
 
   </body>
 </html>
