pre-release update

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
           <div class="buttons buttons--early-access">
 
               <!-- desktop: -->
-              <a href="http://test.microsponsors.io/?view=registry"
+              <a href="http://microsponsors.io/exchange.html?view=registry"
                 class="button is-primary is-green is-medium is-emphasized button--more-details"
                 id="ms-btn-more-details">
                 Register
                 &nbsp;<i class="fas fa-chevron-right"></i>
               </a>
 
-              <a href="http://test.microsponsors.io/"
+              <a href="http://microsponsors.io/exchange.html"
                 class="button is-primary is-medium is-emphasized button--more-details"
                 id="ms-btn-more-details">
                 Browse the exchange
